@@ -58,6 +58,7 @@ class PubChemEtlWorkflow(object):
             logger.info("Dumping index data")
             ok1 = pcewP.dump(contentType="index")
             ok2 = pcewP.toStash(contentType="index")
+            _ = pcewP.toStash(contentType="index", fallBack=True)
             eTime = time.time()
             logger.info("Dumping index data done in (%.4f seconds)", eTime - sTime)
 
@@ -65,6 +66,7 @@ class PubChemEtlWorkflow(object):
             logger.info("Dumping reference data")
             ok3 = pcewP.dump(contentType="data")
             ok4 = pcewP.toStash(contentType="data")
+            _ = pcewP.toStash(contentType="data", fallBack=True)
             eTime = time.time()
             logger.info("Dumping data done in (%.4f seconds)", eTime - sTime)
         except Exception as e:
@@ -82,6 +84,8 @@ class PubChemEtlWorkflow(object):
             sTime = time.time()
             logger.info("Restoring index data")
             ok1 = pcewP.fromStash(contentType="index")
+            if not ok1:
+                ok1 = pcewP.fromStash(contentType="index", fallBack=True)
             numObjIndex = pcewP.restore(contentType="index")
             eTime = time.time()
             logger.info("Restoring index data done in (%.4f seconds)", eTime - sTime)
@@ -89,6 +93,8 @@ class PubChemEtlWorkflow(object):
             sTime = time.time()
             logger.info("Restoring reference data")
             ok2 = pcewP.fromStash(contentType="data")
+            if not ok2:
+                ok2 = pcewP.fromStash(contentType="data", fallBack=True)
             numObjData = pcewP.restore(contentType="data")
             eTime = time.time()
             logger.info("Restoring data done in (%.4f seconds)", eTime - sTime)
@@ -132,6 +138,7 @@ class PubChemEtlWorkflow(object):
             )
             ok2 = pcewP.dump(contentType="index")
             ok3 = pcewP.toStash(contentType="index")
+            ok3 = pcewP.toStash(contentType="index", fallBack=True)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
         #
